test/typecheck/fail/modify_enum.sail
default Order dec
$include <prelude.sail>

enum E = A | B | C

val main : unit -> unit

function main() = {
    A = 0b1
}
